OJ/temp_file/tmp_1614253654.1.compile_error
./temp_file/tmp_1614253654.1.cpp:1:1: error: ‘hhh’ does not name a type
 hhh
 ^~~
